--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -13,7 +13,7 @@
     </style>
 
     <!-- Hesap makinesi butonları -->
-    <style name="CalcBtn">
+    <style name="CalcButton">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">80dp</item>
         <item name="android:layout_weight">1</item>
