--- a/app/src/main/res/layout/job_item.xml
+++ b/app/src/main/res/layout/job_item.xml
@@ -3,18 +3,40 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="12dp"
+    android:layout_margin="8dp"
     android:padding="16dp"
+    android:radius="18dp"
     android:clickable="true"
-    android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
-    android:elevation="6dp"
-    android:radius="16dp">
+    android:foreground="?attr/selectableItemBackground">
 
-    <CheckBox
-        android:id="@+id/checkJob"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:padding="8dp"/>
+        android:layout_height="wrap_content">
+
+        <CheckBox
+            android:id="@+id/checkJob"
+            android:layout_width="100px"
+            android:layout_height="150px"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/txtJobInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="298dp"
+            android:layout_toEndOf="@id/checkJob"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+
+        <ImageButton
+            android:id="@+id/moreButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="0dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/fab_circle" />
+
+    </RelativeLayout>
+
 </com.google.android.material.card.MaterialCardView>
